# atmos

./: .gitignore  FAQ.md  FINAL_SUMMARY.txt  GUIA_CONTRIBUCION.md  IMPLEMENTACION_COMPLETADA.md  INFORME_SIMPLIFICACION.md  INICIO_RAPIDO.md  Makefile  PLAN_ACCION.md  PROJECT_STATUS.md  README.md  RESUMEN_EJECUTIVO.md  VERIFICAR.md  atmos.sh  menu.ps1  menu.sh  run.ps1  scripts.ps1  scripts_backup.ps1
backend/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  seed_weather_data.py
backend/app/: main.py
backend/app/api/v1/: health.py
backend/app/core/: config.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/django_backend/: manage.py  requirements.txt
backend/django_backend/atmos_backend/: settings.py  urls.py
backend/django_backend/users/: tests.py  views.py
backend/tests/: test_health.py
backend/users/: permissions.py  serializers.py  tests.py  urls.py  views.py
backend/users/users/: tests.py
backend/weather/: admin.py  city_photos.py  emblem_photos.py  models.py  prophet_service.py  serializers.py  urls.py  views.py
backend/weather/migrations/: 0001_initial.py  0002_alter_city_options_alter_weatherobservation_options_and_more.py  0002_alter_weatherobservation_options_city_altitud_and_more.py  0003_remove_weatherobservation_dew_point_and_more.py  0003_weatherobservation_updated_at.py  0004_alter_weatherobservation_options_and_more.py  0005_alter_weatherobservation_city.py
(+75 files in other folders)
